[package]
name = "day08"
version = "0.1.0"
authors = ["placinta@gmail.com"]
edition = "2021"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
color-eyre = "0.5.10"
structopt = "0.3.21"
thiserror = "1.0.22"
itertools = "0"
derive_more = "0.99.17"
tailsome = "0.1.0"
auto_enums = "0.8.0"
strum = "0.24.1"
strum_macros = "0.24.3"
enum-iterator = "1.2.0"
num_enum = "0.5.7"
